@@ -1,3 +1,7 @@
+2005-12-20  Les Harris  <lescom@comcast.net>
+
+	* Removed duplicate code that caused a crash on connect.
+
 2005-09-14  Jordi Mallach  <jordi@sindominio.net>
 
 	* Merge gnome-mud-glade-branch to HEAD.
